@@ -1,5 +1,7 @@
 package demo.app.api;
 
+import java.util.ArrayList;
+import java.util.List;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -9,14 +11,11 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import jakarta.servlet.http.HttpServletResponse;
 
 @RestController
 class ExampleController {
 
-    private ArrayList<String> tasks = new ArrayList<>();
+    private final ArrayList<String> tasks = new ArrayList<>();
 
     @GetMapping("/api/healthz")
     Object healthz() {
@@ -26,15 +25,15 @@ class ExampleController {
     @GetMapping(value = "/api/tasks", produces = MediaType.APPLICATION_JSON_VALUE)
     @PreAuthorize("isAuthenticated()")
     Object tasks(SecurityContextHolderAwareRequestWrapper requestWrapper) {
-        if (this.tasks.size() > 0 || !requestWrapper.isUserInRole("ROLE_admin")) {
+        if (!this.tasks.isEmpty() || !requestWrapper.isUserInRole("ROLE_admin")) {
             return this.tasks;
         }
-        return Arrays.asList("add the first task");
+        return List.of("add the first task");
     }
 
     @PostMapping(value = "/api/tasks", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     @PreAuthorize("hasRole('admin')")
-    Object addTask(@RequestBody String task, HttpServletResponse response) {
+    Object addTask(@RequestBody String task) {
         if (task.isBlank()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "task must not be empty");
         }
